dispondo os produtos parte 1

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -111,6 +111,13 @@
     height: 60px;
 }
 
+.cardImgCatalog{
+    width: 200px;
+    height: 200px;
+    margin-left: 40px;
+    margin-top: 10px;
+}
+
 .editProductImg{
     width: 200px;
     height: 150px;
