--- a/app/templates/products/products.html
+++ b/app/templates/products/products.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-xs-12">
             <button id="addButtonProducts" type="button" class="btn btn-success"><a href="/add_products">Adicionar produto</a></button>
-            <button id="backButtonProducts" type="button" class="btn btn-dark"><a href="{{ url_for('products.product_selection')}}">Voltar</a></button>
+            <button id="backButtonProducts" type="button" class="btn btn-warning"><a href="{{ url_for('products.product_selection')}}">Voltar</a></button>
     </div>
         </div>
         <div class="mh-100" id="product_table">
@@ -37,7 +37,7 @@
                         <td>{{p.players}}</td>
                         <td>{{p.age}}</td>
                         <td>{{p.theme.name}}</td>
-                        <td><img class="productImg" src="{{ url_for('static', filename='images/' + p.image) }}"></td>
+                        <td><img class="productImg" src="{{ url_for('static', filename='images/' + p.image) }}" alt="{{p.name}}"></td>
                         <td>
                             <a href="/edit_products/{{p.id}}"><img src="{{ url_for('static', filename='images/edit.png') }}" alt="editar"></a>
                         </td>
