--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
     {% if current_user.is_authenticated %}
         {{current_user.username}}
     {% else %}
-        Estranho
+        Amigo!
     {% endif %}!</h1>
 {% if not known %}
 <p>Bem-vindo!</p>
