adicionando a barra de busca no catalogo

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,8 @@
 {% endif %}
 </div>
 
+{% include 'products/_catalog_selection.html' %}
+
 {% include 'products/_catalog.html' %}
 
 {% endblock %}
