--- a/app/templates/products/_catalog.html
+++ b/app/templates/products/_catalog.html
@@ -1,5 +1,22 @@
 <div class="container">
     <div class="row">
+        {% if product_brands %}
+        {% for b in product_brands%}
+        <div class="col-md-3 mt-3">
+            <div class="panel panel-default">
+                <img class="cardImgCatalog" src="{{url_for('static', filename='images/' + b.image)}}" alt="{{b.name}}">
+                <div class="panel-body">
+                    <h5 class="text-cent">{{b.name}}</h5>
+                    <p class="text-center">Preço: R$ {{b.price}}</p>
+                </div>
+                <div class="panel-footer">
+                    <a href="#" class="float-left btn btn-sm btn-primary">details</a>
+                    <a href="#" class="float-left btn btn-sm btn-warning">Add to cart</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+        {% else %}
         {% for p in products%}
         <div class="col-md-3 mt-3">
             <div class="panel panel-default">
@@ -15,5 +32,6 @@
             </div>
         </div>
         {% endfor %}
+        {% endif %}
     </div>
 </div>
