terminando o filtro por marcas

--- a/app/templates/products/_catalog_selection.html
+++ b/app/templates/products/_catalog_selection.html
@@ -24,7 +24,7 @@
         </div>
         <div class="dropdown">
             <button class="btn btn-primary dropdown-toggle" type="button" id="categorySelection" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Categoria
+            Categorias
             <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" aria-labelledby="category">
