--- a/app/templates/user/user.html
+++ b/app/templates/user/user.html
@@ -2,26 +2,55 @@
 
 {% block title %}Delivery - {{ user.username }}{% endblock %}
 
+{% block head %}
+    {{ super() }}
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+        integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+        crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+        crossorigin=""></script>
+{%endblock%}
+
 {% block page_content %}
 <div class="page-header">
-    <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}">
-    <h1>{{ user.username }}</h1>
-    {% if current_user.is_administrator() %} <h4>Hello Boss</h4> {% endif %}
-    {% if user.username or user.destiny.address %}
     <div class="user_info">
+        <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}">
+        <h1>{{ user.username }}</h1>
+        {% if current_user.is_administrator() %} <h4>Hello Boss</h4> {% endif %}
+        {% if user.username or user.destiny.address %}
         <p>Seu nome de usuário: {% if user.username %}{{ user.username }} {% endif %}</p>
         <p>Seu endereço de entrega: {% if user.destiny.address %} {{ user.destiny.address}} {% endif %}</p>
         <p>Seu email: {% if user.email %} {{ user.email }} {% endif %}</p>
         <p>Seu telefone: {% if user.email %} {{ user.telephone }} {% endif %}</p>
         <p>Membro desde: {{ moment(user.member_since).format('L') }}. Última visita: {{ moment(user.last_seen).fromNow() }}.</p>
-    </div>
-    {% endif %}
-    <div class="user_edtion_option">
-        {% if current_user.is_administrator() %}
-        <a class="btn btn-danger" href="{{ url_for('.edit_profile_admin', id=user.id) }}">Editar perfil [Admin]</a>
-        {% else %}
-        <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">Editar perfil</a>
         {% endif %}
+        <div class="user_edition_option">
+        {% if current_user.is_administrator() %}
+            <a class="btn btn-danger" href="{{ url_for('.edit_profile_admin', id=user.id) }}">Editar perfil [Admin]</a>
+            {% else %}
+            <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">Editar perfil</a>
+        {% endif %}
+        </div>
+    </div>
+
+
+    <div class="user_map_location">
+        {% if isdeliverable and server_status %}
+            <h5 style="color: blue">Entrega-se nesse endereço.</h5>
+        {% elif server_status %}
+            <h5 style="color: red">Desculpe, esse endereço está fora da área de entrega.</h5>
+        {% else %}
+            <h5 style="color: red">Erro no servidor do mapa.</h5>
+        {% endif %}
+    <div id="mapid"></div>
     </div>
 </div>
+
+
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    <script src="{{ url_for('static', filename='js/map.js') }}" lat={{latitude}} lon={{longitude}} server_status={{server_status}}></script>
 {% endblock %}
