--- a/app/templates/products/_catalog.html
+++ b/app/templates/products/_catalog.html
@@ -16,6 +16,22 @@
             </div>
         </div>
         {% endfor %}
+        {% elif product_categories %}
+        {% for c in product_categories %}
+        <div class="col-md-3 mt-3">
+            <div class="panel panel-default">
+                <img class="cardImgCatalog" src="{{url_for('static', filename='images/' + c.image)}}" alt="{{ c.name }}">
+                <div class="panel-body">
+                    <h5 class="text-cent">{{c.name}}</h5>
+                    <p class="text-center">Preço: R$ {{c.price}}</p>
+                </div>
+                <div class="panel-footer">
+                    <a href="#" class="float-left btn btn-sm btn-primary">details</a>
+                    <a href="#" class="float-left btn btn-sm btn-warning">Add to cart</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
         {% else %}
         {% for p in products%}
         <div class="col-md-3 mt-3">
