adicionando paginacao para temas

--- a/app/templates/products/_catalog.html
+++ b/app/templates/products/_catalog.html
@@ -17,7 +17,7 @@
         </div>
         {% endfor %}
     </div>
-        <div class="row">
+    <div class="row">
         <div class="col text-center ">
             {% if product_brands.has_prev %}
             <a href="{{url_for('main.get_brand', id=get_brand_id.id, page=product_brands.prev_num)}}" class="btn btn-outline-primary btn-sm mt-3">Anterior</a>
@@ -58,7 +58,7 @@
     </div>
     <div class="row">
         {% elif product_themes %}
-        {% for t in product_themes %}
+        {% for t in product_themes.items %}
         <div class="col-md-3 mt-3">
             <div class="panel panel-default">
                 <img class="cardImgCatalog" src="{{url_for('static', filename='images/' + t.image)}}" alt="{{ t.name }}">
@@ -73,6 +73,27 @@
             </div>
         </div>
         {% endfor %}
+    </div>
+        <div class="row">
+        <div class="col text-center ">
+            {% if product_themes.has_prev %}
+            <a href="{{url_for('main.get_theme', id=get_theme_id.id, page=product_themes.prev_num)}}" class="btn btn-outline-primary btn-sm mt-3">Anterior</a>
+            {% endif %}
+            {% for page_num in product_themes.iter_pages() %}
+            {% if page_num %}
+            {% if product_themes.page == page_num %}
+            <a href="{{url_for('main.get_theme', id=get_theme_id.id, page=page_num)}}" class="btn btn-primary btn-sm mt-3">{{ page_num }}</a>
+            {% else %}
+            <a href="{{url_for('main.get_theme', id=get_theme_id.id, page=page_num)}}" class="btn btn-outline-primary btn-sm mt-3">{{ page_num }}</a>
+            {% endif %}
+            {% else %}
+            ...
+            {% endif %}
+            {% endfor %}
+            {% if product_themes.has_next %}
+            <a href="{{url_for('main.get_theme', id=get_theme_id.id, page=product_themes.next_num)}}" class="btn btn-outline-primary btn-sm mt-3">Próximo</a>
+            {% endif %}
+        </div>
     </div>
     <div class="row">
         {% else %}
