--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,18 +2,19 @@
 {% block title %}Home{% endblock %}
 
 {% block page_content %}
-<h1>Loja de Jogos Acme</h1>
-<h1>Olá,
-    {% if current_user.is_authenticated %}
-        {{current_user.username}}
+<div class="container">
+    <h1>Loja de Jogos Acme</h1>
+    <h1>Olá,
+        {% if current_user.is_authenticated %}
+            {{current_user.username}}
+        {% else %}
+            Amigo!
+        {% endif %}!</h1>
+    {% if not known %}
+    <p>Bem-vindo!</p>
     {% else %}
-        Amigo!
-    {% endif %}!</h1>
-{% if not known %}
-<p>Bem-vindo!</p>
-{% else %}
-<p>Que bom ve-lo de novo!</p>
-{% endif %}
+    <p>Que bom ve-lo de novo!</p>
+    {% endif %}
 </div>
 
 {% include 'products/_catalog_selection.html' %}
