--- a/app/templates/products/single_page.html
+++ b/app/templates/products/single_page.html
@@ -8,9 +8,9 @@
               <img src="{{ url_for('static', filename='images/' + product.image) }}" alt="product.name" id="product_img_show">
         </div>
         <div class="col-md-6" id="product_details">
-            <h4>Nome do produto: {{ product.name }}</h4>
+            <h4>{{ product.name }}</h4>
             <hr>
-            <p>Preço: R$ {{ product.price }}</p>
+            <p>R$ {{ price }}</p>
             <p><b>Descrição do produto:</b></p>
             <p class="product_description">{{ product.description }}</p>
             <div class="product_description_options">
