--- a/app/templates/products/_catalog_selection.html
+++ b/app/templates/products/_catalog_selection.html
@@ -34,7 +34,7 @@
             </ul>
         </div>
         <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search" id="txtSearch"/>
+            <input type="text" class="form-control" placeholder="Pesquisar" id="txtSearch"/>
             <div class="input-group-btn">
               <button class="btn btn-primary" type="submit">
                 <span class="glyphicon glyphicon-search"></span>
