--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,6 +34,9 @@
                     {% endif %}
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1">Cart ({{ session['shopping_cart']| length}})</a>
+                    </li>
                     {% if current_user.is_authenticated %}
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
