fazendo o corpo do carrinho

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -195,3 +195,8 @@ div#catalogSelectionContainer{
     height: 500px;
     width: 500px;
 }
+
+#cart_img_product{
+    width: 75px;
+    height: 60px;
+}
