--- a/app/templates/products/single_page.html
+++ b/app/templates/products/single_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Produto{% endblock %}
+{% block title %}Produto - {{ product.name }}{% endblock %}
 
 {% block page_content %}
 <div class="container mt-5">
